# wargame_rl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Justfile  README.md  evaluate_elo.py  hyperparameters.yml  idea.md  main.py  pyproject.toml  simulate.py  test_train.ipynb  train.py
.cache_precommit/pre-commit/: db.db
.cursor/rules/: dev-workflow.mdc  gymnasium-env.mdc  project-overview.mdc  python-conventions.mdc  pytorch-dqn.mdc  testing.mdc  workflow-preferences.mdc
.github/workflows/: main-validate.yaml  publish.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  (+6 more)
docs/: ddd-envs.md  goals-and-roadmap.md  missions-and-vp.md  movement.md  multi-run-training.md  opponent-policies.md  reward-phases.md  self-play-elo.md  shooting.md  tabletop-rules-reference.md
runs/: wargame.pt
tests/: conftest.py  test_action_masking.py  test_agent.py  test_clock_integration.py  test_dqn.py  test_elo_system.py  test_env.py  test_evaluate_elo.py  test_fixed_placement.py  test_func.py  test_game_clock.py  test_group_coherency_legality.py  test_imports.py  test_integration.py  test_interactive_demo.py  test_los.py  test_mission_vp.py  test_objective_control_distance_cache.py  test_opponent_model_policy.py  test_opponents.py  test_ppo.py  test_ppo_comprehensive.py  test_reward_phases.py  test_self_play_callback.py  test_shooting_action.py  test_shooting_resolution.py  test_simulate.py  test_state.py  test_train_resume.py  test_train_run_name.py  test_wounds.py  test_z_e2e_training.py
wargame_rl/: __init__.py
(+183 files in other folders)
