[project]
name = "warghame-rl"
version = "0.0.1"
description = ""
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "sash", email = "sashman90@gmail.com" } ]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "gymnasium>=1.0.0,<2.0.0",
    "pygame",
    "numpy",
    "torch",
    "tqdm",
    "plotly==5.24.1",
    "pandas",
    "matplotlib",
    "jupyter>=1.1.1",
    "wandb>=0.21.0",
    "pytorch-lightning>=2.5.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
